--- a/fh.html
+++ b/fh.html
@@ -39,7 +39,7 @@
         <div style="margin: 0; padding: 0;">
             <p style="margin: 0; padding: 0;">
                 在下方输入需要跳转的链接，即可生成防红接口。<br>
-                复制下方生成的链接，粘贴到微信或者QQ即可。
+                复制下方生成的链接，粘贴到微信或者QQ即可。请求必须以http或https开头
                 </p>
             <a href="zhuanma">点击这里跳转到防红二维码</a>
             <p style="margin: 0; padding: 0;font-size: 14px;">
