--- a/fh.html
+++ b/fh.html
@@ -35,7 +35,7 @@
 </head>
 <body class="is-preload">
     <header id="header">
-        <h1>防红接口</h1>
+        <h1>KEKE防红接口</h1>
         <div style="margin: 0; padding: 0;">
             <p style="margin: 0; padding: 0;">
                 在下方输入需要跳转的链接，即可生成防红接口。<br>
